--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>19/03/04 20:57:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SelenuimWebDriver.f()[pri:0, instance:Lesson01.SelenuimWebDriver@2b98378d]">f</td> 
-  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/03/11 19:35:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ex01.beforeStart()[pri:0, instance:Lesson02_locators.ex01@28d25987]">&gt;&gt;beforeStart</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/03/11 19:35:19</td>   <td>4427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ex01.f()[pri:0, instance:Lesson02_locators.ex01@28d25987]">f</td> 
+  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/03/11 19:35:20</td>   <td>6066</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ex01.closeSession()[pri:0, instance:Lesson02_locators.ex01@28d25987]">&lt;&lt;closeSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
 </table>
