--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>19/03/11 19:35:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ex01.beforeStart()[pri:0, instance:Lesson02_locators.ex01@28d25987]">&gt;&gt;beforeStart</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/03/11 19:35:20</td>   <td>6066</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ex01.closeSession()[pri:0, instance:Lesson02_locators.ex01@28d25987]">&lt;&lt;closeSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/03/11 19:35:19</td>   <td>4427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ex01.f()[pri:0, instance:Lesson02_locators.ex01@28d25987]">f</td> 
+<tr bgcolor="69717b">  <td>19/03/18 11:42:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Template.Test1_ChromeDriver()[pri:0, instance:Template@28d25987]">Test1_ChromeDriver</td> 
   <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/03/18 11:42:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Template.Test2_FirefoxDriver()[pri:0, instance:Template@28d25987]">Test2_FirefoxDriver</td> 
+  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/03/18 11:42:44</td>   <td>-7539</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Template.beforeStart()[pri:0, instance:Template@28d25987]">&gt;&gt;beforeStart</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/03/18 11:42:52</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Template.closeSession()[pri:0, instance:Template@28d25987]">&lt;&lt;closeSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
 </table>
