--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>19/03/18 11:42:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Template.beforeStart()[pri:0, instance:Template@28d25987]">&gt;&gt;beforeStart</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/03/18 11:42:52</td>   <td>7539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Template.Test1_ChromeDriver()[pri:0, instance:Template@28d25987]">Test1_ChromeDriver</td> 
-  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/03/18 11:42:52</td>   <td>7539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Template.Test2_FirefoxDriver()[pri:0, instance:Template@28d25987]">Test2_FirefoxDriver</td> 
-  <td>main@348100441</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/03/18 11:42:52</td>   <td>7554</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Template.closeSession()[pri:0, instance:Template@28d25987]">&lt;&lt;closeSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@348100441</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/21 21:45:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SelenuimWebDriver.beforeStart()[pri:0, instance:Lesson01.SelenuimWebDriver@1d057a39]">&gt;&gt;beforeStart</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/21 21:46:07</td>   <td>12071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SelenuimWebDriver.f()[pri:0, instance:Lesson01.SelenuimWebDriver@1d057a39]">f</td> 
+  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/21 21:46:40</td>   <td>44775</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SelenuimWebDriver.closeSession()[pri:0, instance:Lesson01.SelenuimWebDriver@1d057a39]">&lt;&lt;closeSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
 </table>
